adding feature(favorite screen)

--- a/app/src/main/res/layout/fav_items.xml
+++ b/app/src/main/res/layout/fav_items.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:elevation="6dp"
+    android:layout_margin="10dp"
+    android:elevation="10dp"
     app:cardCornerRadius="20dp"
     app:cardElevation="20dp">
 
@@ -13,48 +14,60 @@
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
+        <androidx.constraintlayout.widget.Group
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="150dp"
+            app:constraint_referenced_ids="nameView,descriptionView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="149dp"
             android:layout_height="124dp"
+            android:layout_margin="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <Button
+            android:id="@+id/removeButton"
+            android:layout_width="56dp"
+            android:layout_height="52dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/baseline_delete_outline_24"
+            android:text="@string/remove_meal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/nameView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
+            android:fontFamily="sans-serif"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:textStyle=""
+            app:layout_constraintBottom_toTopOf="@+id/descriptionView"
+            app:layout_constraintEnd_toEndOf="@+id/descriptionView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/descriptionView"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <RatingBar
-            android:id="@+id/ratingBar"
-            android:layout_width="244dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:isIndicator="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/nameView" />
-
-        <Button
-            android:id="@+id/removeButton"
+        <TextView
+            android:id="@+id/descriptionView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="41dp"
-            android:layout_marginEnd="83dp"
-            android:text="remove item"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toTopOf="@+id/removeButton"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.185"
             app:layout_constraintStart_toEndOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
-            android:background="@drawable/custom_button"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/nameView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
