adding colors and design to the login page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="lightGreen">#12b5b0</color>
     <color name="darkYellow">#f8b400</color>
     <color name="lightGrey"> #e0e0d1</color>
+    <color name="lightYellow">#fff5cc</color>
 </resources>
