--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -5,50 +5,136 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
     tools:context=".authentication.View.AuthenticationFragment">
 
-    <EditText
-        android:id="@+id/email_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="95dp"
-        android:ems="10"
-        android:hint="@string/Email_hit"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" />
+      <androidx.cardview.widget.CardView
+          android:id="@+id/cardView"
+          android:layout_width="0dp"
+          android:layout_height="147dp"
 
-    <EditText
-        android:id="@+id/password_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:ems="10"
-        android:hint="@string/password_hint"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_txt" />
+          android:backgroundTint="@color/darkGreen"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="112dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="71dp"
-        android:text="@string/btn_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:theme="@style/Theme.FoodPlanner"
-        app:layout_constraintTop_toBottomOf="@+id/password_txt" />
+      <androidx.cardview.widget.CardView
+          android:id="@+id/cardView2"
+          android:layout_width="0dp"
+          android:layout_height="308dp"
+
+          android:layout_marginTop="4dp"
+          android:backgroundTint="@color/darkGreen"
+          app:cardCornerRadius="70dp"
+          app:cardElevation="10dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.0"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"/>
+
+      <androidx.cardview.widget.CardView
+          android:layout_width="79dp"
+          android:layout_height="155dp"
+
+          android:layout_marginStart="88dp"
+          android:layout_marginTop="124dp"
+          android:backgroundTint="@color/darkYellow"
+          app:cardCornerRadius="70dp"
+          app:cardElevation="10dp"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/cardView" >
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                  <TextView
+                      android:id="@+id/signup_txt"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginTop="16dp"
+                      android:text="@string/Sign_up_txt"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      app:layout_constraintStart_toStartOf="parent"
+                      app:layout_constraintTop_toTopOf="parent" />
+
+                  <androidx.cardview.widget.CardView
+                      android:id="@+id/cardsign"
+                      android:layout_width="60dp"
+                      android:layout_height="60dp"
+                      android:layout_marginBottom="16dp"
+                      app:cardCornerRadius="1500dp"
+                      android:backgroundTint="@color/darkGreen"
+
+                      app:cardElevation="10dp"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      app:layout_constraintStart_toStartOf="parent" >
+
+                        <ImageView
+                            android:id="@+id/imageView"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/downward_24" />
+                  </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+      </androidx.cardview.widget.CardView>
+
+      <androidx.constraintlayout.widget.Guideline
+          android:id="@+id/guideline3"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          app:layout_constraintGuide_begin="-18dp" />
+
+      <androidx.cardview.widget.CardView
+          android:layout_width="79dp"
+          android:layout_height="155dp"
+
+          android:layout_marginTop="90dp"
+          android:layout_marginEnd="80dp"
+          android:backgroundTint="@color/darkYellow"
+          app:cardCornerRadius="70dp"
+          app:cardElevation="10dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/cardView">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cardLogin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:ignore="ExtraText">
+
+                  <TextView
+                      android:id="@+id/textView12"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:layout_marginBottom="16dp"
+                      android:text="@string/log_in_txt"
+                      app:layout_constraintBottom_toBottomOf="parent"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      app:layout_constraintStart_toStartOf="parent" />
+
+                  <androidx.cardview.widget.CardView
+                      android:id="@+id/log"
+                      android:layout_width="60dp"
+                      android:layout_height="60dp"
+                      android:layout_marginTop="16dp"
+                      app:cardCornerRadius="1500dp"
+                      app:layout_constraintEnd_toEndOf="parent"
+                      app:layout_constraintStart_toStartOf="parent"
+                      app:layout_constraintTop_toTopOf="parent" >
+
+                        <ImageView
+                            android:id="@+id/imageView4"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/arrow__24" />
+                  </androidx.cardview.widget.CardView><![CDATA[
+
+                  />
+            ]]>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+      </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
