--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -59,7 +59,7 @@
                       app:layout_constraintTop_toTopOf="parent" />
 
                   <androidx.cardview.widget.CardView
-                      android:id="@+id/cardsign"
+                      android:id="@+id/signupButton"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:layout_marginBottom="16dp"
@@ -72,10 +72,10 @@
                       app:layout_constraintStart_toStartOf="parent" >
 
                         <ImageView
-                            android:id="@+id/imageView"
+                            android:id="@+id/signup"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:src="@drawable/downward_24" />
+                            android:src="@drawable/signup" />
                   </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>
@@ -116,7 +116,7 @@
                       app:layout_constraintStart_toStartOf="parent" />
 
                   <androidx.cardview.widget.CardView
-                      android:id="@+id/log"
+                      android:id="@+id/loginButton"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       android:layout_marginTop="16dp"
