--- a/app/src/main/res/layout/fragment_authentication.xml
+++ b/app/src/main/res/layout/fragment_authentication.xml
@@ -7,6 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".authentication.View.AuthenticationFragment">
 
+      <com.airbnb.lottie.LottieAnimationView
+          android:id="@+id/chefAnimation"
+          android:layout_width="372dp"
+
+          android:layout_height="134dp"
+          android:layout_marginTop="32dp"
+          android:elevation="5dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/cardView2"
+          app:layout_constraintVertical_bias="0.597"
+          app:lottie_autoPlay="true"
+          app:lottie_loop="true"
+          app:lottie_rawRes="@raw/wave" />
+
       <androidx.cardview.widget.CardView
           android:id="@+id/cardView"
           android:layout_width="0dp"
