--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -91,7 +91,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/loginPageButton"
                 android:layout_width="186dp"
                 android:layout_height="41dp"
                 android:layout_marginBottom="50dp"
