--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeScreen">
+    app:startDestination="@id/splashScreen">
 
     <fragment
         android:id="@+id/splashScreen"
@@ -48,7 +48,17 @@
         android:id="@+id/searchScreen"
         android:name="com.example.foodplanner.search.View.SearchFragment"
         android:label="fragment_search_screen"
-        tools:layout="@layout/fragment_search_screen" />
+        tools:layout="@layout/fragment_search_screen" >
+        <action
+            android:id="@+id/action_searchScreen_to_searcByhIngridientFragment"
+            app:destination="@id/searcByhIngridientFragment" />
+        <action
+            android:id="@+id/action_searchScreen_to_searchByCountryFragment"
+            app:destination="@id/searchByCountryFragment" />
+        <action
+            android:id="@+id/action_searchScreen_to_searchByCategoryFragment"
+            app:destination="@id/searchByCategoryFragment" />
+    </fragment>
     <fragment
         android:id="@+id/calenderScreen"
         android:name="com.example.foodplanner.calender.View.CalenderFragment"
@@ -78,12 +88,20 @@
         android:id="@+id/loginFragment"
         android:name="com.example.foodplanner.login.view.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_homeScreen"
+            app:destination="@id/homeScreen" />
+    </fragment>
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.example.foodplanner.signUp.view.SignUpFragment"
         android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" />
+        tools:layout="@layout/fragment_sign_up" >
+        <action
+            android:id="@+id/action_signUpFragment_to_homeScreen"
+            app:destination="@id/homeScreen" />
+    </fragment>
     <fragment
         android:id="@+id/accountFragment"
         android:name="com.example.foodplanner.userDetails.AccountFragment"
