Add search meal screen 🍔🇾🇪🍎

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -112,4 +112,9 @@
         android:name="com.example.foodplanner.MealDetailsFragment"
         android:label="fragment_meal_details"
         tools:layout="@layout/fragment_meal_details" />
+    <fragment
+        android:id="@+id/searchForMealFragment"
+        android:name="com.example.foodplanner.searchForMealFragment"
+        android:label="fragment_search_for_meal"
+        tools:layout="@layout/fragment_search_for_meal" />
 </navigation>
